[package]
name = "dm-maker"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
las = { version = "0.9.3", features = ["laz-parallel"] }
proj = "0.28.0"
rayon = "1.10.0"
rusqlite = "0.32.1"
spade = "2.13.1"
walkdir = "2.5.0"
maptile = { path = "../maptile" }
