[package]
name = "laz2dem"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.6", default-features = false, features = [
  "jpeg",
  "png",
] }
las = { version = "0.9.4", features = ["laz-parallel"] }
proj = "0.29.0"
rayon = "1.10.0"
rusqlite = "0.32.1"
spade = "2.13.1"
tilemath = "0.1.0"
zstd = "0.13.3"
clap = { version = "4.5.37", features = ["derive"] }
itertools = "0.14.0"
ndarray = "0.16.1"
lerc = "0.2.0"
lru = "0.14.0"

[profile.release]
panic = "abort"
